fixed some layout issues for smartphone devices

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body {
 .site-title {
   margin: 0;
   color: var(--color-dark);
-  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 2vw, 2.5rem);
   font-family: 'Orbitron', sans-serif;
   font-weight: 700;
   letter-spacing: clamp(1px, 0.4vw, 2px);
@@ -67,7 +67,7 @@ body {
 
 .nav {
   display: flex;
-  gap: 2rem;
+  gap: clamp(1rem, 1vw, 2rem);
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -90,11 +90,14 @@ body {
 
 .navbar-right {
   display: flex;
+  flex-wrap: wrap;
   gap: clamp(0.5rem, 2vw, 2rem);
   align-items: center;
   flex-shrink: 1;
   min-width: 0;
+  white-space: nowrap;
 }
+
 
 .nav-link {
   display: flex;
@@ -102,7 +105,7 @@ body {
   border: none;
   color: var(--color-dark);
   cursor: pointer;
-  font-size:  clamp(0.75rem, 2vw, 1rem);
+  font-size:  clamp(0.75rem, 1vw, 1rem);
   padding: 0;
   font-weight: 700;
   font-family: 'Orbitron', sans-serif;
@@ -275,7 +278,7 @@ body {
 .page-title {
   margin: 0 0 3rem;
   color: var(--color-dark);
-  font-size: clamp(2.5rem, 3vw, 10rem);
+  font-size: clamp(2rem, 3vw, 10rem);
   font-weight: 700;
   font-family: 'Orbitron', sans-serif;
   letter-spacing: 3px;
@@ -297,7 +300,7 @@ body {
 .project-title {
   margin: 0 0 1rem;
   color: var(--color-dark);
-  font-size: 2rem;
+  font-size: clamp(1.4rem, 2vw, 2rem);
   font-family: 'Orbitron', sans-serif;
   font-weight: 700;
   letter-spacing: 2px;
@@ -307,7 +310,7 @@ body {
   color: var(--color-dark);
   margin: 0 0 1.5rem;
   line-height: 1.7;
-  font-size: 1.125rem;
+  font-size: clamp(0,75rem, 1vw, 1.125rem);
   font-family: 'Space Grotesk', sans-serif;
   opacity: 0.8;
 }
@@ -428,7 +431,7 @@ body {
 .experience-role {
   margin: 0 0 0.5rem;
   color: var(--color-dark);
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 2vw, 2rem);
   font-family: 'Orbitron', sans-serif;
   font-weight: 700;
   letter-spacing: 2px;
@@ -437,7 +440,7 @@ body {
 .experience-company {
   margin: 0;
   color: var(--color-dark);
-  font-size: 1.5rem;
+  font-size: clamp(1.25rem, 1.25vw, 1.5rem);
   font-family: 'Space Grotesk', sans-serif;
   font-weight: 600;
   opacity: 0.9;
@@ -446,7 +449,7 @@ body {
 .experience-date {
   flex: 0 0 auto;
   color: var(--color-dark);
-  font-size: clamp(0.85rem, 1.5vw, 1rem);
+  font-size: clamp(0.65rem, 1.5vw, 1rem);
   padding: clamp(0.4rem, 1vw, 0.6rem)
            clamp(0.75rem, 2vw, 1rem);
   font-weight: 700;
@@ -461,7 +464,7 @@ body {
   color: var(--color-dark);
   margin: 1.5rem 0 0 0;
   line-height: 1.8;
-  font-size: 1.125rem;
+  font-size: clamp(0.9rem, 1vw, 1.125rem);
   font-weight: 1000;
   font-family: 'Space Grotesk', sans-serif;
   opacity: 0.85;
@@ -476,7 +479,7 @@ body {
 
 .experience-highlights li {
   color: var(--color-text-light);
-  font-size: 1.125rem;
+  font-size: clamp(0.9rem, 1vw, 1.125rem);
   font-family: 'Space Grotesk', sans-serif;
   line-height: 1.8;
   opacity: 0.85;
@@ -491,7 +494,7 @@ body {
   left: 0;
   color: var(--color-dark);
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: clamp(0.9rem, 1vw, 1.125rem);
 }
 
 .portfolio-list {
@@ -737,13 +740,12 @@ body {
   color: var(--color-dark);
   background: var(--color-light);
   border-top: 1px solid var(--color-dark);
-  width: max(100%, 1133px);
   font-family: 'Space Grotesk', sans-serif;
 }
 
 .footer-text {
   margin: 0;
-  font-size: 0.875rem;
+  font-size: clamp(0.6rem, 1vw, 0,875rem);
   max-width: 1920px;
   letter-spacing: 1px;
 }
